refactor: preview service